[package]
name = "v3"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
gloo-net = { version = "0.6", features = ["http"] }
web-sys = { version = "0.3", features = [
  "Window",
  "Navigator",
  "ServiceWorkerContainer",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "HtmlAnchorElement",
  "Document",
  "DocumentFragment",
  "Element",
  "HtmlElement",
  "Blob",
  "BlobPropertyBag",
  "FormData",
  "Headers",
  "Request",
  "RequestInit",
  "Response",
  "Url",
  "Event",
  "DragEvent",
  "DataTransfer",
  "History",
  "Location",
  "InputEvent",
] }
rexie = "0.6"
console_error_panic_hook = "0.1"
